apps/base/audiobookshelf/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: audiobookshelf
spec:
  redirectScheme:
    scheme: https
    permanent: true
